<resources>
    <string name="app_name">PokerSessionTracker</string>
    <string name="newSessionButton">Log New Session</string>
    <string name="loggedSessionsButton">View Sessions</string>
    <string name="statisticsButton">View Statistics</string>
    <string name="cashGameButton">Cash Game</string>
    <string name="tournamentButton">Tournament</string>
    <string name="blindsTextView">Blinds</string>
    <string name="buyInTextView">Buy-In</string>
    <string name="cashOutTextView">Cash Out</string>
    <string name="startTimeTextView">Start Time</string>
    <string name="endTimeTextView">End Time</string>
    <string name="addCashGameButton">Add Cash Game</string>
    <string name="startTimeHint">Select Start Time</string>
    <string name="endTimeHint">Select End Time</string>
    <string name="tournamentBuyInTV">Buy-In</string>
    <string name="tournamentCashOutTV">Cash Out</string>
    <string name="addTournamentButton">Add Tournament</string>
    <string name="tournNameTV">Name</string>
    <string name="tournDate">Date</string>
    <string name="tournDateHint">Select Date</string>
    <string name="tournNameHint">example: \"WSOP Main Event\"</string>
    <string name="localTournButton">Local Tournaments</string>
    <string name="cashOption">Cash</string>
    <string name="tournOption">Tournament</string>
    <string name="totalCashProfit">Total Profit: $</string>
    <string name="cashWinSessions">Winning Sessions:</string>
    <string name="cashLosses">Losing Sessions:</string>
    <string name="tournTotalProfit">Total Profit: $</string>
    <string name="totalROI">ROI: %</string>
    <string name="totalTournCashes">Total Cashes:</string>
    <string name="deleteSession">Delete</string>
</resources>