<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainPageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        >

    <Button
        android:id="@+id/newSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newSessionButton" />

    <Button
        android:id="@+id/loggedSessionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggedSessionsButton"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statisticsButton"
        android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/tournamentCalendarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Upcoming Tournaments"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>